[package]
name = "squish"
version = "0.1.0"
edition = "2021"
description = "Demonstration of 2D and 3D (temporal) DCT and quantisation compression of videos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
itertools = "0.10.5"
thiserror = "1.0.37"
